--- a/data/rush/16170.yaml
+++ b/data/rush/16170.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have a face-up "Apocalypse - Beast Gear World" on your field, pay 1000 LP.
+    If you have "Apocalypse - Beast Gear World" face-up on your field, pay 1000 LP.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Beast-Warrior Type monster from your Graveyard to your field face-up. It inflicts piercing battle damage this turn (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    Special Summon 1 Beast-Warrior Type monster from your Graveyard face-up to your field. If the monster Special Summoned by this effect attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
