--- a/data/rush/16707.yaml
+++ b/data/rush/16707.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, all face-up monsters on the field lose 200 ATK, also all face-up Beast Type Normal Monsters on the field gain 400 DEF.
+    While this card is face-up in the Field Zone, face-up monsters on the field lose 200 ATK, and face-up Beast Type Normal Monsters on the field gain 400 DEF.
   de:
   es:
   fr:
