--- a/data/rush/16696.yaml
+++ b/data/rush/16696.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 LIGHT Attribute Dragon Type monster from your Graveyard to your field face-up.
+    Special Summon 1 LIGHT Attribute Dragon Type monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
