--- a/data/cards/yugipedia986053.yaml
+++ b/data/cards/yugipedia986053.yaml
@@ -32,6 +32,7 @@ attribute: LIGHT
 level: 8
 atk: 1600
 def: 1700
+materials: 1 "Watt" Tuner + 1 or more non-Tuner Thunder-Type monsters
 series:
 - Watt
 images:
