--- a/data/rush/yugipedia975309.yaml
+++ b/data/rush/yugipedia975309.yaml
@@ -62,10 +62,13 @@ series:
 maximum_atk: 3500
 images:
 - index: 1
-  image: BlazeboltChemistormFenghuangVolcalizePhoenix-OW.png
+  image: BlazeboltChemistormFenghuangVolcalizePhoenix-RDKP14-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP14-JP0??
+  - set_number: RD/KP14-JP016
     set_name: Phoenix of the Roaring Flame
     rarities:
+    - UR
+    - ScR
+    - ORR
 yugipedia_page_id: 975309
