--- a/data/rush/yugipedia975311.yaml
+++ b/data/rush/yugipedia975311.yaml
@@ -48,10 +48,13 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: BlazeboltChemistormFenghuangVolcalizePhoenix-OW.png
+  image: BlazeboltChemistormFenghuangVolcalizePhoenixR-RDKP14-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP14-JP0??
+  - set_number: RD/KP14-JP017
     set_name: Phoenix of the Roaring Flame
     rarities:
+    - UR
+    - ScR
+    - ORR
 yugipedia_page_id: 975311
