--- a/data/cards/80611581.yaml
+++ b/data/cards/80611581.yaml
@@ -12,7 +12,7 @@ name:
   ko: 후완다리즈×엠펜
   ko_rr: Huwandarijeu × Empen
   zh-TW:
-  zh-CN: 轻风游鸟×帝企
+  zh-CN: 随风飘飘游×帝企
 text:
   en: |-
     If this card is Tribute Summoned: You can add 1 "Floowandereeze" Spell/Trap from your Deck to your hand, then immediately after this effect resolves, you can Normal Summon 1 monster. While this Tribute Summoned card is in the Monster Zone, your opponent cannot activate the effects of Special Summoned monsters they control in Attack Position. Once per battle, during damage calculation, if this card battles an opponent's monster (Quick Effect): You can banish 1 card from your hand; that opponent's monster's current ATK/DEF become halved until the end of this turn.
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 어드밴스 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "후완다리즈" 마법 / 함정 카드 1장을 패에 넣는다. 그 후, 몬스터 1장을 일반 소환할 수 있다. ②: 어드밴스 소환한 이 카드가 몬스터 존에 존재하는 한, 상대 필드의 특수 소환된 공격 표시 몬스터는 효과를 발동할 수 없다. ③: 이 카드가 상대 몬스터와 전투를 실행하는 데미지 계산시에 1번, 패를 1장 제외하고 발동할 수 있다. 그 상대 몬스터의 공격력 / 수비력은 턴 종료시까지 절반이 된다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡召唤成功的场合可以发动。从卡组将1张「ふわんだりぃず／轻风游鸟」魔法陷阱卡加入手牌。那之后，可以召唤1只怪兽。②：只要高等召唤的这张卡在怪兽区存在，对手场上的特殊召唤的攻击表示的怪兽就不能发动效果。③：这张卡与对手怪兽进行战斗的伤害计算时有1次，可以将1张手牌除外发动。那只对手怪兽的攻击力、守备力直到回合结束时变为一半。
+    ①：此卡上级召唤成功的情况下可以发动。从牌组将１张“随风飘飘游”魔法・陷阱卡加入手牌。然后可召唤１只怪兽。②：只要上级召唤的此卡存在于怪兽区域，对手场上被特殊召唤的攻击表示怪兽不可发动效果。③：此卡与对手怪兽进行战斗的伤害计算时１次，将１张手牌除外可以发动。该对手怪兽的攻击力・守备力直至回合结束时为止变为一半。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: WIND
@@ -134,6 +134,11 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP6-SC121
+    set_name: Mega Pack 06
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
