--- a/data/cards/18940725.yaml
+++ b/data/cards/18940725.yaml
@@ -12,7 +12,7 @@ name:
   ko: 후완다리즈×로비나
   ko_rr: Huwandarijeu × Robina
   zh-TW:
-  zh-CN: 轻风游鸟×知更
+  zh-CN: 随风飘飘游×知更
 text:
   en: |-
     If this face-up card would leave the field, banish it instead. You can only use each of the following effects of "Floowandereeze & Robina" once per turn, and cannot Special Summon during the turn you activate either effect. If this card is Normal Summoned: You can add 1 Level 4 or lower Winged Beast monster from your Deck to your hand, then immediately after this effect resolves, you can Normal Summon 1 Winged Beast monster. If a Winged Beast monster is Normal Summoned to your field while this card is banished: You can add this card to your hand.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없으며, 이 효과를 발동하는 턴에, 자신은 몬스터를 특수 소환할 수 없다. ①: 이 카드가 일반 소환에 성공했을 경우에 발동할 수 있다. 덱에서 레벨 4 이하의 비행야수족 몬스터 1장을 패에 넣는다. 그 후, 비행야수족 몬스터 1장을 일반 소환할 수 있다. ②: 앞면 표시의 이 카드는 필드에서 벗어났을 경우에 제외된다. ③: 이 카드가 제외되어 있는 상태에서, 자신 필드에 비행야수족 몬스터가 일반 소환되었을 경우에 발동할 수 있다. 이 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①③效果1回合各能使用1次，这些效果发动的回合，自己不能特殊召唤怪兽。①：这张卡召唤成功的场合可以发动。从卡组将1只等级4以下的鸟兽族怪兽加入手牌。那之后，可以召唤1只鸟兽族怪兽。②：表侧表示的这张卡从场上离开的场合除外。③：这张卡是除外中的状态下，自己场上有鸟兽族怪兽被召唤的场合可以发动。将这张卡加入手牌。
+    此卡名的①③效果１回合仅可各使用１次，发动此效果的回合中，自己不可将怪兽特殊召唤。①：此卡召唤成功的情况下可以发动。从牌组将１只等级４以下的鸟兽族怪兽加入手牌。然后，可召唤１只鸟兽族怪兽。②：表侧表示的此卡离开场上的情况下，将其除外。③：此卡在被除外的状态下，鸟兽族怪兽被召唤至自己场上的情况下可以发动。将此卡加入手牌。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: WATER
@@ -100,6 +100,13 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Rare
+  zh-CN:
+  - set_number: MGP6-SC117
+    set_name: Mega Pack 06
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
