--- a/data/cards/53334641.yaml
+++ b/data/cards/53334641.yaml
@@ -12,7 +12,7 @@ name:
   ko: 고스트릭의 타천사
   ko_rr: Goseuteurik-ui Tacheonsa
   zh-TW:
-  zh-CN: 鬼计惰天使
+  zh-CN: 鬼计的惰天使
 text:
   en: |-
     2 Level 4 monsters
@@ -40,10 +40,9 @@ text:
     이 카드는 "고스트릭의 타천사" 이외의 자신 필드의 "고스트릭" 엑시즈 몬스터 위에 이 카드를 겹치고 엑시즈 소환할 수도 있다. 또한, 이 카드가 가지고 있는 엑시즈 소재의 수가 10 이 되었을 경우, 자신은 듀얼에서 승리한다. ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 덱에서 "고스트릭" 마법 / 함정 카드 1장을 패에 넣는다. ②: 1턴에 1번, 자신 메인 페이즈에 발동할 수 있다. 패의 "고스트릭" 카드 1장을 이 카드의 아래에 겹치고 엑시즈 소재로 한다.
   zh-TW:
   zh-CN: |-
-    4星怪兽×2
-    这张卡也能在「鬼计惰天使」以外的自己场上的「鬼计」XYZ怪兽上面把这张卡重叠来XYZ召唤。此外，这张卡持有的XYZ素材数量变成10时，自己决斗胜利。
-    ①：1回合1次，把这张卡1个XYZ素材取除才能发动。从卡组把1张「鬼计」魔法·陷阱卡加入手卡。
-    ②：1回合1次，自己主要阶段才能发动。把手卡1张「鬼计」卡在这张卡下面重叠作为XYZ素材。
+    等级４怪兽×２
+
+    此卡也可重叠在“鬼计的惰天使”以外的自己场上的“鬼计”超量怪兽上面来超量召唤。此卡拥有的超量素材数量变为１０时，自己获得决斗胜利。①：１回合１次，去除此卡的１个超量素材可以发动。从牌组将１张“鬼计”魔法・陷阱卡加入手牌。②：１回合１次，在自己的主要阶段可以发动。将手牌的１张“鬼计”卡重叠在此卡下方作为超量素材。
 card_type: Monster
 monster_type_line: Fairy / Xyz / Effect
 attribute: DARK
@@ -131,6 +130,13 @@ sets:
     - Secret Rare
     - Extra Secret Rare
     - Quarter Century Secret Rare
+  zh-CN:
+  - set_number: CL04-SC145
+    set_name: Classic Pack 04
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
