--- a/data/cards/yugipedia980579.yaml
+++ b/data/cards/yugipedia980579.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja:
-  ja_romaji: Cortázar Eguzaraputoru
+  ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>エグザラプトル
+  ja_romaji: Chōetsuryū Eguzaraputoru
   ko:
   ko_rr:
   zh-TW:
