--- a/rush.yaml
+++ b/rush.yaml
@@ -95807,6 +95807,8 @@ attribute: DARK
 level: 7
 atk: 2500
 def: 1500
+series:
+- Abysslayer
 images:
 - index: 1
   image: AbysslayerApsaras-RDVSP1-JP-SR.png
@@ -95865,6 +95867,8 @@ attribute: DARK
 level: 5
 atk: 1500
 def: 1000
+series:
+- Abysslayer
 images:
 - index: 1
   image: AbysslayerMakara-RDVSP1-JP-C.png
@@ -95922,6 +95926,8 @@ attribute: DARK
 level: 3
 atk: 1100
 def: 0
+series:
+- Abysslayer
 images:
 - index: 1
   image: AbysslayerCetus-RDVSP1-JP-C.png
@@ -95979,6 +95985,8 @@ attribute: DARK
 level: 3
 atk: 1000
 def: 400
+series:
+- Abysslayer
 images:
 - index: 1
   image: AbysslayerVodyanoy-RDVSP1-JP-C.png
@@ -104966,3 +104974,125 @@ sets:
     rarities:
     - Rare
 yugipedia_page_id: 991608
+---
+konami_id:
+name:
+  en: Jointech Ignition
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジョインテック・イグニッション
+  ja_romaji: Jointekku Igunisshon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack targeting your face-up EARTH Attribute Machine Type monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The attack target cannot be destroyed by that battle. Then, if you have a face-up Level 7 or higher EARTH Attribute Machine Type monster on your field, you can destroy the attacking monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Jointech
+images:
+- index: 1
+  image: JointechIgnition-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP058
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+yugipedia_page_id: 991611
+---
+konami_id:
+name:
+  en: Jointech Fighter
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジョインテック・ファイター
+  ja_romaji: Jointekku Faitā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Take 1 Level 7 EARTH Attribute Machine Type monster from your Graveyard, and either add it to your hand or Special Summon it face-up to your field. Then, if it was "Jointech Hero", you can add 1 "Jointech Ace" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Fusion / Effect
+attribute: EARTH
+level: 6
+atk: 2600
+def: 2600
+materials:
+  en: |-
+    "Jointech Ace" + "Jointech Ace"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Jointech
+images:
+- index: 1
+  image: JointechFighter-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP043
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+yugipedia_page_id: 991613
