--- a/data/cards/30983281.yaml
+++ b/data/cards/30983281.yaml
@@ -12,7 +12,7 @@ name:
   ko: 액셀싱크로 스타더스트 드래곤
   ko_rr: Aekselsingkeuro Seutadeoseuteu Deuraegon
   zh-TW:
-  zh-CN: 加速同调星尘龙
+  zh-CN: 加速同步・星尘龙
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -40,8 +40,8 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 싱크로 소환에 성공했을 경우에 발동할 수 있다. 자신 묘지에서 레벨 2 이하의 튜너 1장을 고르고 특수 소환한다. ②: 서로의 메인 페이즈에, 이 카드를 릴리스하고 발동할 수 있다. 엑스트라 덱에서 "스타더스트 드래곤" 1장을 싱크로 소환으로 취급하여 특수 소환한다. 그 후, 자신 필드의 몬스터를 소재로서 싱크로 소환한다. 이 턴에, 이 효과로 싱크로 소환한 몬스터는 상대가 발동한 효과를 받지 않는다.
   zh-TW:
   zh-CN: |-
-    调整+1只以上调整以外的怪兽
-    这个卡名的①②效果1回合各能使用1次。①：这张卡同调召唤成功的场合可以发动。从自己的墓地选1只等级2以下的调整特殊召唤。②：双方的主要阶段，可以将这张卡解放发动。从额外卡组将1只「スターダスト・ドラゴン／星尘龙」当作同调召唤地特殊召唤。那之后，将自己场上的怪兽作为素材来同调召唤。这个回合，用这个效果同调召唤的怪兽不受对手发动的效果影响。
+    协调＋１只以上协调以外的怪兽
+    此卡名的①②效果１回合仅可各使用１次。①：此卡同步召唤成功的情况下可以发动。从自己的墓地挑选１只等级２以下的协调特殊召唤。②：在双方的主要阶段，解放此卡可以发动。从额外牌组将１只“星尘龙”视为同步召唤特殊召唤。然后，将自己场上的怪兽作为素材同步召唤。此回合，以此效果同步召唤的怪兽不受对手发动的效果影响。
 card_type: Monster
 monster_type_line: Dragon / Synchro / Effect
 attribute: WIND
@@ -102,6 +102,11 @@ sets:
     - Secret Rare
     - Ultimate Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP6-SC179
+    set_name: Mega Pack 06
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
