--- a/data/cards/06039967.yaml
+++ b/data/cards/06039967.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 몬스터의 공격 선언시에 발동할 수 있다. 이 카드를 패에서 수비 표시로 특수 소환한다. ②: 자신의 언데드족 몬스터가 상대 몬스터와 전투를 실행하는 데미지 계산시에 1번, 100 의 배수의 LP를 지불하고 발동할 수 있다(최대 3000 까지). 그 자신 몬스터의 공격력 / 수비력은 그 데미지 계산시에만 지불한 수치만큼 올린다. ③: 이 카드가 전투로 몬스터를 파괴한 배틀 페이즈 종료시에 발동할 수 있다. 그 몬스터를 묘지에서 가능한 한 자신 필드에 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    此卡名的①效果1回合仅可使用1次。①：怪兽的攻击宣言时可以发动。将此卡以守备表示形式从手牌特殊召唤。②：每次自己的不死族怪兽和对手怪兽进行战斗的伤害计算时，支付100的倍数的LP可以发动1次（最多3000）。该自己怪兽的攻击力・守备力仅在该次伤害计算时上升支付的数值。③：此卡因战斗破坏怪兽的战斗阶段结束时可以发动。将该怪兽从墓地尽可能在自己场上特殊召唤。
+    此卡名的①效果１回合仅可使用１次。①：怪兽的攻击宣言时可以发动。将此卡以守备表示形式从手牌特殊召唤。②：每次自己的不死族怪兽和对手怪兽进行战斗的伤害计算时，支付１００的倍数的LP可以发动１次（最多３０００）。该自己怪兽的攻击力・守备力仅在该次伤害计算时上升支付的数值。③：此卡战斗破坏怪兽的战斗阶段结束时可以发动。将该怪兽从墓地尽可能特殊召唤至自己场上。
 card_type: Monster
 monster_type_line: Zombie / Effect
 attribute: DARK
@@ -118,6 +118,11 @@ sets:
     set_name: Entry Pack Volume 2
     rarities:
     - Common
+  - set_number: TM02-SC099
+    set_name: 'Theme Pack: Undead Rondo'
+    rarities:
+    - Common
+    - Ultimate Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
