--- a/rush.yaml
+++ b/rush.yaml
@@ -4821,6 +4821,10 @@ sets:
     set_name: Strongest Battle Deck Gavin - Demon Commander Three Legions
     rarities:
     - Common
+  - set_number: RD/B232-JP007
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP01-KR012
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
@@ -58111,6 +58115,10 @@ sets:
     set_name: Saikyō Jump March 2022 promotional card
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/B232-JP009
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
 yugipedia_page_id: 717324
 ---
 konami_id: 17402
@@ -64729,6 +64737,11 @@ sets:
     set_name: Strongest Battle Deck Yuhi - Join and Explode! Join and Intensify!
     rarities:
     - Common
+  - set_number: RD/B232-JP002
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/GRD2-KR010
     set_name: Go Rush Deck - Jointech Attack
@@ -68921,6 +68934,12 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Rare
+  - set_number: RD/B232-JP001
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Super Rare
+    - Ultra Rare
   ko:
   - set_number: RD/MRP1-KR096
     set_name: Megaroad Pack
@@ -84370,6 +84389,11 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Common
+  - set_number: RD/B232-JP004
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/ORP1-KR036
     set_name: Over Rush Pack
@@ -89504,6 +89528,11 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Common
+  - set_number: RD/B232-JP005
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP12-KR031
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
@@ -93730,12 +93759,18 @@ series:
 images:
 - index: 1
   image: DragonTribeFusion-RDLGP1-JP-R.png
+- index: 2
+  image: DragonTribeFusion-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/LGP1-JP024
     set_name: Legend Awakening Pack
     rarities:
     - Rare
+  - set_number: RD/S23P-JP004
+    set_name: Tournament Battle July 2023 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/LGP1-KR024
     set_name: Legend Awakening Pack
@@ -94580,6 +94615,11 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Common
+  - set_number: RD/B232-JP003
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/LGP1-KR040
     set_name: Legend Awakening Pack
@@ -103878,6 +103918,160 @@ sets:
     - Secret Rare
 yugipedia_page_id: 986105
 ---
+konami_id: 19267
+name:
+  en: Fireyarou
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A malevolent creature wrapped in flames that attacks enemies with intense fire.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    炎につつまれた魔人。まわりの炎を自在に操り攻撃する。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Pyro / Normal
+attribute: FIRE
+level: 4
+atk: 1300
+def: 1000
+images:
+- index: 1
+  image: Fireyarou-RDB232-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B232-JP006
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+yugipedia_page_id: 990305
+---
+konami_id: 19268
+name:
+  en: Gravity Plus Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: グラビティ・プラス・ドラゴン
+  ja_romaji: Gurabiti Purasu Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    手札１枚を墓地へ送って発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up monster on your field gains ATK equal to [the number of face-up Dragon Type Normal Monsters on your field] x 400 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分フィールドの表側表示モンスター１体を選び、その攻撃力をターン終了時まで、［自分フィールドの表側表示の通常モンスター（ドラゴン族）の数］×４００アップする。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: EARTH
+level: 6
+atk: 1600
+def: 1000
+images:
+- index: 1
+  image: GravityPlusDragon-RDB232-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B232-JP008
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+yugipedia_page_id: 990306
+---
+konami_id: 19269
+name:
+  en: Three Cavalteers
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>三<rt>さん</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>騎<rt>き</rt></ruby>
+  ja_romaji: Sanjūki
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's Level 7 or higher monster declares an attack while you have 3 or more Level 7 or higher monsters in your Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分の墓地にモンスター（レベル７以上）が３体以上いる場合、相手モンスター（レベル７以上）の攻撃宣言時に発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The attacking monster loses 1000 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    攻撃してきたモンスターの攻撃力はターン終了時まで１０００ダウンする。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: ThreeCavalteers-RDB232-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B232-JP010
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+yugipedia_page_id: 990307
+---
 konami_id:
 name:
   en: Thestalos the Firestorm Monarch
@@ -104654,155 +104848,6 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 987033
----
-konami_id:
-name:
-  en: Fireyarou
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ja_romaji:
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    A malevolent creature wrapped in flames that attacks enemies with intense fire.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Pyro / Normal
-attribute: FIRE
-level: 4
-atk: 1300
-def: 1000
-images:
-- index: 1
-  image: Fireyarou-RDB232-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B232-JP006
-    set_name: Battle Pack 2023 Vol.2
-    rarities:
-    - Common
-yugipedia_page_id: 990305
----
-konami_id:
-name:
-  en: Gravity Plus Dragon
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: グラビティ・プラス・ドラゴン
-  ja_romaji: Gurabiti Purasu Doragon
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    Send 1 card from your hand to the Graveyard.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    1 face-up monster on your field gains ATK equal to [the number of face-up Dragon Type Normal Monsters on your field] x 400 until the end of this turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Dragon / Effect
-attribute: EARTH
-level: 6
-atk: 1600
-def: 1000
-images:
-- index: 1
-  image: GravityPlusDragon-RDB232-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B232-JP008
-    set_name: Battle Pack 2023 Vol.2
-    rarities:
-    - Common
-yugipedia_page_id: 990306
----
-konami_id:
-name:
-  en: Three Cavalteers
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: <ruby>三<rt>さん</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>騎<rt>き</rt></ruby>
-  ja_romaji: Sanjūki
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    When an opponent's Level 7 or higher monster declares an attack while you have 3 or more Level 7 or higher monsters in your Graveyard.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    The attacking monster loses 1000 ATK until the end of this turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Trap
-property: Normal
-images:
-- index: 1
-  image: ThreeCavalteers-RDB232-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B232-JP010
-    set_name: Battle Pack 2023 Vol.2
-    rarities:
-    - Common
-yugipedia_page_id: 990307
 ---
 konami_id:
 name:
