--- a/data/cards/46986414.yaml
+++ b/data/cards/46986414.yaml
@@ -1209,6 +1209,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: PSEC-SC002
+    set_name: Prismatic Secret Rare "Dark Magician" GET Campaign
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
