--- a/rush.yaml
+++ b/rush.yaml
@@ -104367,6 +104367,62 @@ yugipedia_page_id: 975297
 ---
 konami_id:
 name:
+  en: Steel Soldier Gale Vinary
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>鋼<rt>こう</rt></ruby><ruby>鉄<rt>てつ</rt></ruby><ruby>兵<rt>へい</rt></ruby>ゲール・ヴァイナリー
+  ja_romaji: Kōtetsuhei Gēru Vainarī
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Toss a coin. If the result is heads, all face-up monsters on your field gain 500 ATK until the end of this turn. If the result is tails, you can make 1 face-up monster on your opponent's field lose 800 ATK/DEF until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: EARTH
+level: 3
+atk: 1200
+def: 1000
+images:
+- index: 1
+  image: SteelSoldierGaleVinary-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP036
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Super Rare
+    - Secret Rare
+yugipedia_page_id: 975305
+---
+konami_id:
+name:
   en: Blazebolt Chemistorm Fenghuang Volcalize Phoenix
   de:
   es:
