--- a/data/cards/01984618.yaml
+++ b/data/cards/01984618.yaml
@@ -119,5 +119,5 @@ sets:
     - Quarter Century Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 715997
