--- a/data/cards/18326736.yaml
+++ b/data/cards/18326736.yaml
@@ -137,5 +137,5 @@ sets:
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 383499
