--- a/data/cards/25862681.yaml
+++ b/data/cards/25862681.yaml
@@ -211,5 +211,5 @@ sets:
     - Quarter Century Secret Rare
 limit_regulation:
   tcg: Limited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 48890
