--- a/data/cards/57103969.yaml
+++ b/data/cards/57103969.yaml
@@ -317,6 +317,6 @@ sets:
     - Collector's Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Semi-Limited
+  ocg: Unlimited
   speed: Unlimited
 yugipedia_page_id: 230764
