--- a/data/cards/74997493.yaml
+++ b/data/cards/74997493.yaml
@@ -165,5 +165,5 @@ sets:
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 532128
