--- a/data/cards/84211599.yaml
+++ b/data/cards/84211599.yaml
@@ -202,5 +202,5 @@ sets:
     - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Semi-Limited
+  ocg: Limited
 yugipedia_page_id: 716258
