--- a/data/rush/yugipedia975305.yaml
+++ b/data/rush/yugipedia975305.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    コイントスを１回行う。表だった場合、自分フィールドの全ての表側表示モンスターの攻撃力はターン終了時まで５００アップする。裏だった場合、相手フィールドの表側表示モンスター１体を選んでその攻撃力・守備力をターン終了時まで８００ダウンできる。
   ko:
   zh-TW:
   zh-CN:
