--- a/data/cards/09603252.yaml
+++ b/data/cards/09603252.yaml
@@ -77,7 +77,11 @@ series:
 - Witchcrafter
 images:
 - index: 1
+  image: WitchcrafterViceMadame-SSB1-JP-SR.png
+  illustration: WitchcrafterViceMadame-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: WitchcrafterViceMadame-MAMA-EN-UR-1E.png
+  illustration: WitchcrafterViceMadame-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: MAMA-EN020
