--- a/data/cards/95515789.yaml
+++ b/data/cards/95515789.yaml
@@ -44,7 +44,11 @@ atk: 1500
 def: 1500
 images:
 - index: 1
+  image: BlazingCartesiatheVirtuous-DABL-JP-SR.png
+  illustration: BlazingCartesiatheVirtuous-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: BlazingCartesiatheVirtuous-DABL-EN-ScR-1E.png
+  illustration: BlazingCartesiatheVirtuous-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DABL-EN011
