--- a/rush.yaml
+++ b/rush.yaml
@@ -105269,3 +105269,58 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 991815
+---
+konami_id:
+name:
+  en: Fusionic Revivern
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: フュージョニック・リヴァイバーン
+  ja_romaji: Fyūjonikku Riwaibān
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    TBA
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    TBA
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: LIGHT
+level: 1
+atk: 0
+def: 0
+images:
+- index: 1
+  image: FusionicRevivern-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP030
+    set_name: Saikyō Jump September 2023 promotional card
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 991886
