--- a/data/cards/29284413.yaml
+++ b/data/cards/29284413.yaml
@@ -50,31 +50,31 @@ sets:
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   de:
   - set_number: KICO-DE002
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   fr:
   - set_number: KICO-FR002
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   it:
   - set_number: KICO-IT002
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   pt:
   - set_number: KICO-PT002
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   ja:
   - set_number: WPP2-JP002
     set_name: World Premiere Pack 2021
