--- a/data/cards/56673112.yaml
+++ b/data/cards/56673112.yaml
@@ -49,31 +49,31 @@ sets:
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   de:
   - set_number: KICO-DE003
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   fr:
   - set_number: KICO-FR003
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   it:
   - set_number: KICO-IT003
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   pt:
   - set_number: KICO-PT003
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   ja:
   - set_number: WPP2-JP003
     set_name: World Premiere Pack 2021
