--- a/data/cards/92067220.yaml
+++ b/data/cards/92067220.yaml
@@ -46,31 +46,31 @@ sets:
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   de:
   - set_number: KICO-DE004
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   fr:
   - set_number: KICO-FR004
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   it:
   - set_number: KICO-IT004
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   pt:
   - set_number: KICO-PT004
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   ja:
   - set_number: WPP2-JP004
     set_name: World Premiere Pack 2021
