--- a/data/cards/93880808.yaml
+++ b/data/cards/93880808.yaml
@@ -50,31 +50,31 @@ sets:
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   de:
   - set_number: KICO-DE001
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   fr:
   - set_number: KICO-FR001
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   it:
   - set_number: KICO-IT001
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   pt:
   - set_number: KICO-PT001
     set_name: King's Court
     rarities:
     - Ultra Rare
-    - Collectors Rare
+    - Collector's Rare
   ja:
   - set_number: WPP2-JP001
     set_name: World Premiere Pack 2021
