--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -41,9 +41,9 @@ jobs:
           curl -fsSLO https://github.com/DawnbrandBots/yaml-yugi-ko/raw/master/overrides.tsv
           curl -fsSLO https://dawnbrandbots.github.io/yaml-yugi-ko/ocg.csv
       - run: pip install -r src/requirements.txt
-      # - name: Transform (series)
-      #   working-directory: yaml-yugi/data/series
-      #   run: python3 ../../src/main_archetypes.py ../../../yaml-yugipedia/wikitext/archetypes
+      - name: Transform (series)
+        working-directory: yaml-yugi/data/series
+        run: python3 ../../src/main_archetypes.py ../../../yaml-yugipedia/wikitext/archetypes
       - name: Transform (OCG+TCG)
         working-directory: yaml-yugi/data/cards
         run: |
@@ -64,12 +64,12 @@ jobs:
           python3 ../../src/main_rush.py \
             ../../../yaml-yugipedia/wikitext/rush \
             --aggregate ../../../aggregate/rush.json
-      # - name: Transform (TCG Speed Duel Skills)
-      #   working-directory: yaml-yugi/data/tcg-speed-skill
-      #   run: |
-      #     python3 ../../src/main_speed.py \
-      #       ../../../yaml-yugipedia/wikitext/speed \
-      #       --aggregate ../../../aggregate/skill.json
+      - name: Transform (TCG Speed Duel Skills)
+        working-directory: yaml-yugi/data/tcg-speed-skill
+        run: |
+          python3 ../../src/main_speed.py \
+            ../../../yaml-yugipedia/wikitext/speed \
+            --aggregate ../../../aggregate/skill.json
       - id: commit
         uses: ./yaml-yugi/.github/actions/commit-push
         with:
