--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -67,6 +67,7 @@ jobs:
       - name: Transform (TCG Speed Duel Skills)
         working-directory: yaml-yugi/data/tcg-speed-skill
         run: |
+          git rm --ignore-unmatch *.json *.yaml
           python3 ../../src/main_speed.py \
             ../../../yaml-yugipedia/wikitext/speed \
             --aggregate ../../../aggregate/skill.json
