--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -2663,14 +2663,14 @@
   zh-TW:
   zh-CN:
 - en: Mannadium
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Mannadium
+  es: Mannadium
+  fr: Mannadium
+  it: Mannadium
+  pt: Mannadium
   ja: マナドゥム
   ja_romaji: Manadumu
-  ko:
+  ko: 마나둠
   ko_rr:
   zh-TW:
   zh-CN:
