--- a/rush.yaml
+++ b/rush.yaml
@@ -104365,6 +104365,219 @@ yugipedia_page_id: 975297
 ---
 konami_id:
 name:
+  en: Veteran Curse of Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>歴<rt>れき</rt></ruby><ruby>戦<rt>せん</rt></ruby>のカース・オブ・ドラゴン
+  ja_romaji: Rekisen no Kāsu Obu Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If you have no monsters on your field, you can Special Summon this card from your hand face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card's name becomes "Curse of Dragon" this turn. Then, you can Fusion Summon by shuffling this card from your field and 1 monster from your field or Graveyard into the owner's Deck as material.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: DARK
+level: 5
+atk: 2000
+def: 1500
+series:
+- Gaia
+images:
+- index: 1
+  image: VeteranCurseofDragon-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP031
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Super Rare
+    - Secret Rare
+yugipedia_page_id: 975299
+---
+konami_id:
+name:
+  en: Veteran Gaia the Fierce Knight
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>歴<rt>れき</rt></ruby><ruby>戦<rt>せん</rt></ruby>の<ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby>ガイア
+  ja_romaji: Rekisen no Ankoku Kishi Gaia
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Tribute Summon this card in Attack Position by Tributing 1 face-up Level 5 or higher monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card's name becomes "Gaia The Fierce Knight" this turn. Then, you can Fusion Summon by shuffling this card from your field and 1 monster from your field or Graveyard into the owner's Deck as material.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: WIND
+level: 7
+atk: 2300
+def: 2100
+series:
+- Gaia
+images:
+- index: 1
+  image: VeteranGaiatheFierceKnight-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP032
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Super Rare
+    - Secret Rare
+yugipedia_page_id: 975301
+---
+konami_id:
+name:
+  en: Gaia the Battle Ruler
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>百<rt>ひゃく</rt></ruby><ruby>戦<rt>せん</rt></ruby>の<ruby>覇<rt>は</rt></ruby><ruby>者<rt>しゃ</rt></ruby>ガイア
+  ja_romaji: Hyakusen no Hasha Gaia
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During your Main Phase this card was Special Summoned, shuffle 1 non-Magical Knight Type monster from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Multi-Choice
+effect:
+  en: |-
+    ● This turn, this card can attack directly.
+    ● Destroy 1 Spell/Trap Card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Magical Knight / Fusion / Effect
+attribute: WIND
+level: 7
+atk: 2600
+def: 2100
+materials:
+  en: |-
+    "Gaia The Fierce Knight" + "Curse of Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Gaia
+images:
+- index: 1
+  image: GaiatheBattleRuler-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP046
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Super Rare
+    - Secret Rare
+yugipedia_page_id: 975303
+---
+konami_id:
+name:
   en: Steel Soldier Gale Vinary
   de:
   es:
@@ -104675,6 +104888,73 @@ sets:
     - ScR
     - ORR
 yugipedia_page_id: 975311
+---
+konami_id:
+name:
+  en: Launcher Catapult Turtle
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>射<rt>しゃ</rt></ruby><ruby>出<rt>しゅつ</rt></ruby>のカタパルト・タートル
+  ja_romaji: Shashutsu no Kataparuto Tātoru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If you have no Attack Position monsters on your field, you can Special Summon this card from your hand face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 face-up Fusion Monster from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 Spell/Trap Card on your opponent's field. Then, if you have "Gaia the Dragon Champion" in your Graveyard, you can destroy 1 card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Aqua / Effect
+attribute: WATER
+level: 5
+atk: 1000
+def: 2000
+images:
+- index: 1
+  image: LauncherCatapultTurtle-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP030
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+yugipedia_page_id: 977131
 ---
 konami_id:
 name:
@@ -105600,3 +105880,113 @@ sets:
     rarities:
     - Rare
 yugipedia_page_id: 992850
+---
+konami_id:
+name:
+  en: Change Slime - Dragon Champion Mode
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: チェンジ・スライム－竜騎士形態
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 1 non-Fusion Monster from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Fusion Summon by sending 1 Level 7 Warrior Type monster and 1 Level 5 Dragon Type monster from your hand and/or field to the Graveyard as material.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Aqua / Effect
+attribute: WATER
+level: 4
+atk: 1100
+def: 600
+images:
+- index: 1
+  image: ChangeSlimeDragonChampionMode-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP028
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+yugipedia_page_id: 993035
+---
+konami_id:
+name:
+  en: Dragoncurse Magician
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 竜呪術の魔道士
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have 3 or more Spell Cards in your Graveyard, send this face-up card from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 "Gaia The Fierce Knight" or 1 Level 5 Dragon Type Normal Monster from your hand or your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: DARK
+level: 4
+atk: 1100
+def: 1100
+images:
+- index: 1
+  image: DragoncurseMagician-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP029
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+yugipedia_page_id: 993036
